# from-c-ro-to-ml

./: .gitignore  CMakeLists.txt  CNAME  README.md
libs/: nn.c  nn.h
src/: gates.c  gates_2.c  mnist.c  nn_example.c  raylib_test.c  simple_neuron.c  upscale_img.c
